# COMPASS

./: README.md  environment.yml  eval.py  pyproject.toml  train.py
COMPASS/analysis/: average_treatment_effects.py
COMPASS/data/: __init__.py
COMPASS/data/PapalexiSatija2021/: data_module.py  sams_vae_ood.yaml
COMPASS/data/frangiehlzar/: data_module.py  sams_vae_ood.yaml
COMPASS/data/utils/: perturbation_datamodule.py  perturbation_dataset.py  preprocess.py
COMPASS/models/: __init__.py
COMPASS/models/sams_vae/: __init__.py  loss_module.py  model.py  predictor.py
COMPASS/models/sams_vae/guides/: correlated_normal_guide.py  mean_field_normal_guide.py
COMPASS/models/utils/: lightning_callbacks.py  loss_modules.py  mlp.py  normalization.py  perturbation_conditioner.py  perturbation_lightning_module.py  predictor.py
